plugins {
    id 'eclipse'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.88'
}

version = "v${mod_version}-mc${mc_version}"
group = mod_group_id // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = mod_id

// Mojang ships Java 21 to end users in 1.21+, so your mod should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
neoForge {

    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_version
        minecraftVersion = project.mc_version
    }
    // When true, this property will have all Eclipse/IntelliJ IDEA run configurations run the "prepareX" task for the given run configuration before launching the game.
    // In most cases, it is not necessary to enable.
    // enableEclipsePrepareRuns = true
    // enableIdeaPrepareRuns = true

    // When true, this property will add the folder name of all declared run configurations to generated IDE run configurations.
    // The folder name can be set on a run configuration using the "folderName" property.
    // By default, the folder name of a run configuration is the name of the Gradle project containing it.
    // generateRunFolders = true

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        // applies to all the run configs below
        configureEach {

            systemProperty 'forge.enabledGameTestNamespaces', mod_id
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.WARN
        }

        client {
            client()
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            programArguments.addAll '--username', 'Kapitencraft', '--uuid', '00c930fd-9d29-44ca-b614-e5ce6e8bd457'
        }

        kaupenClient {
            client()
            programArguments.addAll '--username', 'Kaupenjoe', '--uuid', '665ad10f-5548-4985-986b-b642732ddce0'
        }

        server {
            server()
            programArgument '--nogui'
        }

        data {
            data()
            // example of overriding the workingDirectory set in configureEach above

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath(), '--existing-mod', 'kap_lib'
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you

    flatDir {
        dir 'dependencies'
    }

    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so:
    maven { url 'https://maven.blamejared.com' }

    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
}

dependencies {

    compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
    // at runtime, use the full JEI jar for Forge
    runtimeOnly "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"

    //runtimeOnly "blank:debug_plus:v1.0.0-mc${mc_version}"

    implementation "maven.modrinth:kap_lib:v${kap_lib_version}-mc${mc_version}"
}

tasks.named('processResources', ProcessResources).configure {
    var metaProperties = [
            minecraft_version: mc_version, mc_version_range: mc_version_range,
            neo_version    : neo_version, neo_version_range: neo_version_range,
            loader_version_range: loader_version_range,
            mod_id           : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors      : mod_authors, mod_description: mod_description,
    ]
    inputs.properties metaProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand metaProperties + [project: project]
    }

    var publishProperties = [
            mod_id: mod_id, mod_name: mod_name,
            mod_version: mod_version, minecraft_version: mc_version,
            neo_version: neo_version, kap_lib_version: kap_lib_version
    ]

    inputs.properties publishProperties
    filesMatching(['publish_config.json']) {
        filteringCharset = 'UTF-8'
        expand publishProperties
    }
}

// Example for how to get properties into the manifest for reading at runtime.
jar {
    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : '1', // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
        ])
    }
}
// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
// publish.dependsOn('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
